<resources>
    <string name="app_name">NASA</string>
    <string name="open_string">open</string>
    <string name="close_string">closed</string>
    <string name="help">Help</string>
    <string name="main_help">Enter your firstname and lastname, then click the button to proceed.\n\nYou may also use the toolbar icons or navigation menu.</string>
    <string name="enter_name">Please enter your name to continue.</string>
    <string name="already_home">You are already home.</string>
    <string name="successful">Image downloaded successfully.</string>
    <string name="okay">OKAY</string>
    <string name="nasaphoto_help">Use the button labeled "RE-ROLL" to get a new randomized NASA image.\n\nThe button labeled "SAVE" will save the displayed image to the devices image directory.</string>
    <string name="ask_reroll">Are you sure you want to re-roll this image?</string>
    <string name="new_image">New random NASA image?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="browser">Select Browser</string>
    <string name="already_randomizer">You are already in the randomizer.</string>
    <string name="gallery_help">The gallery displays all images saved in the NASA photo randomizer.\n\n
    Tap on the images to view their save path.\n\nIn the future delete functionality will be added.</string>
    <string name="already_gallery">You are already in the gallery.</string>
    <string name="lastname">Lastname</string>
    <string name="firstname">Firstname</string>
    <string name="who_is_using_the_app_today">Who is using the app today?</string>
    <string name="press_for_image">Press For A\nRandom NASA Photo</string>
    <string name="re_roll">Re-roll</string>
    <string name="save">Save</string>
    <string name="randomizer">Randomizer</string>
    <string name="photos">Photos</string>
    <string name="home">Home</string>
    <string name="help_page_text">\n\n1.To use the application, start from the homepage and enter your name.
        \n\n2.Then click the button in the middle of the screen.
        \n\n3.A new page will open where a random image will be generated using NASA API.
        \n\n4.The RE-ROLL button will generate a new date, with a corresponding image.
        \n\n5.The SAVE button will save the image displayed on the screen to a folder on your device.
        \n\n6.Click the URL beneath the image to open the image in a web browser.
    \n\n7.To view the newly saved photo(s), click on the gallery icon in the toolbar, or open the navigation drawer and select Gallery.
    \n\n8Enjoy your new NASA images.\n\nFor more information please contact:\nrabh0003@algonquinlive.com</string>
    <string name="already_help">You are already on the help page.</string>
    <string name="help_help">The help page is meant to guide you through the application.\n\nFollow the steps outline on this page.</string>
</resources>